--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   },
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.7",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.6",
-    "@emotion/styled": "^11.10.5",
+    "@types/react-icons": "^3.0.0",
+    "material-ui-phone-number-2": "^1.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "storybook-addon-next-router": "^4.0.0",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.7",
@@ -35,7 +39,6 @@
     "@nrwl/storybook": "14.7.5",
     "@nrwl/web": "14.6.1",
     "@nrwl/workspace": "14.6.1",
-    "nx": "14.6.4",
     "@storybook/addon-essentials": "~6.5.12",
     "@storybook/builder-webpack5": "~6.5.13",
     "@storybook/core-server": "~6.5.12",
@@ -68,6 +71,7 @@
     "jest": "28.1.3",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.1",
+    "nx": "14.6.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "1.54.5",
