--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.12",
     "@mui/x-date-pickers": "^5.0.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/react-icons": "^3.0.0",
     "material-ui-phone-number-2": "^1.3.0",
     "react": "18.2.0",
